Support Azure realtime configuration

--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,17 @@
 OPENAI_API_KEY=your_api_key
+
+# Azure OpenAI configuration (optional)
+# AZURE_OPENAI_API_KEY=your_azure_api_key
+# AZURE_OPENAI_ENDPOINT=https://your-resource-name.openai.azure.com
+# AZURE_OPENAI_REALTIME_DEPLOYMENT=your-realtime-deployment
+# AZURE_OPENAI_TRANSCRIPTION_DEPLOYMENT=your-transcription-deployment
+# AZURE_OPENAI_REALTIME_API_VERSION=2024-10-01-preview
+
+# Browser-visible realtime overrides (optional)
+# NEXT_PUBLIC_AZURE_OPENAI_ENDPOINT=https://your-resource-name.openai.azure.com
+# NEXT_PUBLIC_AZURE_OPENAI_REALTIME_DEPLOYMENT=your-realtime-deployment
+# NEXT_PUBLIC_AZURE_OPENAI_TRANSCRIPTION_DEPLOYMENT=your-transcription-deployment
+# NEXT_PUBLIC_AZURE_OPENAI_REALTIME_API_VERSION=2024-10-01-preview
+# NEXT_PUBLIC_REALTIME_BASE_URL=https://api.openai.com/v1/realtime
+# NEXT_PUBLIC_REALTIME_MODEL=gpt-4o-realtime-preview-2025-06-03
+# NEXT_PUBLIC_TRANSCRIPTION_MODEL=gpt-4o-mini-transcribe
