--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,8 @@
-OPENAI_API_KEY=your_api_key
+AZURE_OPENAI_ENDPOINT=https://your-resource.openai.azure.com
+AZURE_OPENAI_API_VERSION=2024-08-01-preview
+AZURE_OPENAI_REALTIME_DEPLOYMENT=your-realtime-deployment
+AZURE_OPENAI_TRANSCRIBE_DEPLOYMENT=your-transcribe-deployment
+AZURE_OPENAI_GUARDRAIL_DEPLOYMENT=your-guardrail-deployment
+AZURE_TENANT_ID=00000000-0000-0000-0000-000000000000
+AZURE_CLIENT_ID=00000000-0000-0000-0000-000000000000
+AZURE_CLIENT_SECRET=your-client-secret
